--- a/bio.html
+++ b/bio.html
@@ -14,7 +14,7 @@ permalink: /bio/
       Welcome! This blog (and podcast) is the chicken scratch of a simple layman with a few too many thoughts bouncing around in his head. I was brought up as a farm kid in rural Vermont, and then educated in logic and quantitative reasoning via my formal training in mathematics. Both experiences endowed me with skills that carry over nicely to many other endeavors in my life. That's a good thing, since my interests are a wandering, various, and sundry collection of everything from probability theory to physical culture to Reformed theology.
     </p>
     <p>
-      I am a Calvinist and a postmillenialist; those two things are among the surest of what I know from holy scripture. In short, that means I believe that God is God, and Christ wins history through His church. Most of what I write here is a way for me to figure out what those two things really mean, and to impart to others what the ramifications of them are for the rest of life itself. I hope you can be blessed by what I do here.
+      I am a Calvinist and a postmillenialist; those two things are among the surest of what I know from holy scripture. Most of what I write here is a way for me to figure out what those two things really mean, and to impart to others what the ramifications of them are for the rest of life itself. I hope you can be blessed by what I do here.
     </p>
   </div>
 </div>
