--- a/bio.html
+++ b/bio.html
@@ -11,10 +11,13 @@ permalink: /bio/
   </div>
   <div class="column is-9">
     <p>
-      Welcome! This blog (and podcast) is the chicken scratch of a layman with too many thoughts bouncing around in his head. I'm a farm kid from rural Vermont with a degree in mathematics. Both experiences endowed me with skills that carry over nicely to many other endeavors in my life. That's a good thing, since my interests are a wandering, various, and sundry collection of everything from probability theory to physical culture to Reformed theology.
+      
+      Welcome! I am a Calvinist postmillenialist; those two things are among the surest of what I know from holy scripture. Most of what I write here is a way for me to figure out what those two things really mean, and to impart to others what the ramifications of them are for the rest of life itself. I hope you can be blessed by what I do here.
+
+      This blog (and podcast) is the chicken scratch of a layman with too many thoughts bouncing around in his head. I'm a farm kid from rural Vermont with a degree in mathematics. Both experiences endowed me with skills that carry over nicely to many other endeavors in my life. That's a good thing, since my interests are a wandering, various, and sundry collection of everything from probability theory to physical culture to Reformed theology.
     </p>
     <p>
-      I am a Calvinist and a postmillenialist; those two things are among the surest of what I know from holy scripture. Most of what I write here is a way for me to figure out what those two things really mean, and to impart to others what the ramifications of them are for the rest of life itself. I hope you can be blessed by what I do here.
+
     </p>
   </div>
 </div>
